--- a/cat_cas_car/templates/articles/homepage.html.twig
+++ b/cat_cas_car/templates/articles/homepage.html.twig
@@ -24,7 +24,7 @@
                                 <div class="col-auto d-none d-lg-block">
                                     <img class="article-img" src="{{ asset('images/car2.jpg') }}" alt="">
                                 </div>
-                                <a class="col p-2 px-4 d-flex flex-column article-item" href="#">
+                                <a class="col p-2 px-4 d-flex flex-column article-item" href="{{ path('app_article_show', {'slug': 'when-they-put-toilet-in-car'}) }}">
                                     <h5 class="mb-2">Когда в машинах поставят лоток? <span class="badge badge-info article-comments">5 комментов</span></h5>
                                     <div class="mb-2 d-flex">
                                         <span class="badge badge-pill badge-secondary mr-2">Дрындулет</span>
@@ -45,7 +45,7 @@
                                 <div class="col-auto d-none d-lg-block">
                                     <img class="article-img" src="{{ asset('images/car1.jpg') }}" alt="">
                                 </div>
-                                <a class="col p-2 px-4 d-flex flex-column article-item" href="#">
+                                <a class="col p-2 px-4 d-flex flex-column article-item" href="{{ path('app_article_show', {'slug': 'chasing-the-red-point'}) }}">
                                     <h5 class="mb-2">В погоне за красной точкой <span class="badge badge-info article-comments">5 комментов</span></h5>
                                     <div class="mb-2 d-flex">
                                         <span class="badge badge-pill badge-secondary mr-2">Карета</span>
@@ -64,7 +64,7 @@
                                 <div class="col-auto d-none d-lg-block">
                                     <img class="article-img" src="{{ asset('images/car2.jpg') }}" alt="">
                                 </div>
-                                <a class="col p-2 px-4 d-flex flex-column article-item" href="#">
+                                <a class="col p-2 px-4 d-flex flex-column article-item" href="{{ path('app_article_show', {'slug': 'is-there-a-life-after-nine-life'}) }}">
                                     <h5 class="mb-2">Есть ли жизнь после девятой жизни? <span class="badge badge-info article-comments">9 комментов</span></h5>
                                     <div class="mb-2 d-flex">
                                         <span class="badge badge-pill badge-secondary mr-2">Дрындулет</span>
@@ -84,7 +84,7 @@
                                 <div class="col-auto d-none d-lg-block">
                                     <img class="article-img" src="{{ asset('images/car2.jpg') }}" alt="">
                                 </div>
-                                <a class="col p-2 px-4 d-flex flex-column article-item" href="#">
+                                <a class="col p-2 px-4 d-flex flex-column article-item" href="{{ path('app_article_show', {'slug': 'when-they-put-toilet-in-car'}) }}">
                                     <h5 class="mb-2">Когда в машинах поставят лоток? <span class="badge badge-info article-comments">9 комментов</span></h5>
                                     <div class="mb-2 d-flex">
                                         <span class="badge badge-pill badge-secondary mr-2">Автобус</span>
@@ -102,7 +102,7 @@
                                 <div class="col-auto d-none d-lg-block">
                                     <img class="article-img" src="{{ asset('images/car3.jpeg') }}" alt="">
                                 </div>
-                                <a class="col p-2 px-4 d-flex flex-column article-item" href="#">
+                                <a class="col p-2 px-4 d-flex flex-column article-item" href="{{ path('app_article_show', {'slug': 'chasing-the-red-point'}) }}">
                                     <h5 class="mb-2">В погоне за красной точкой <span class="badge badge-info article-comments">2 комментов</span></h5>
                                     <div class="mb-2 d-flex">
                                         <span class="badge badge-pill badge-secondary mr-2">Дрындулет</span>
