--- a/cat_cas_car/templates/articles/show.html.twig
+++ b/cat_cas_car/templates/articles/show.html.twig
@@ -27,7 +27,9 @@
                                             Николай
                                         </div>
                                         <div class="text-muted align-self-center ml-4">26 days ago</div>
-                                        <div class="text-muted align-self-center ml-4 article-detail-hearts">120 <i class="far fa-heart text-danger"></i></div>
+                                        <div class="text-muted align-self-center ml-4 article-detail-hearts"
+                                            data-item="likes" data-type="like"
+                                        ><span data-item="likesCount">120</span> <i class="far fa-heart text-danger"></i></div>
                                     </div>
                                 </div>
                             </div>
@@ -105,4 +107,9 @@
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('css/detail.css') }}">
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('js/like.js') }}"></script>
 {% endblock %}
