--- a/cat_cas_car/templates/articles/homepage.html.twig
+++ b/cat_cas_car/templates/articles/homepage.html.twig
@@ -19,13 +19,14 @@
                             </div>
                         </div>
 
+                        {% for article in articles %}
                         <div class="article-container mb-2">
                             <div class="row no-gutters border rounded-lg overflow-hidden flex-md-row mb-4 shadow-sm position-relative">
                                 <div class="col-auto d-none d-lg-block">
                                     <img class="article-img" src="{{ asset('images/car2.jpg') }}" alt="">
                                 </div>
-                                <a class="col p-2 px-4 d-flex flex-column article-item" href="{{ path('app_article_show', {'slug': 'when-they-put-toilet-in-car'}) }}">
-                                    <h5 class="mb-2">Когда в машинах поставят лоток? <span class="badge badge-info article-comments">5 комментов</span></h5>
+                                <a class="col p-2 px-4 d-flex flex-column article-item" href="{{ path('app_article_show', {'slug': article.slug}) }}">
+                                    <h5 class="mb-2">{{ article.title}} <span class="badge badge-info article-comments">5 комментов</span></h5>
                                     <div class="mb-2 d-flex">
                                         <span class="badge badge-pill badge-secondary mr-2">Дрындулет</span>
                                         <span class="badge badge-pill badge-secondary mr-2">Карета</span>
@@ -33,87 +34,13 @@
                                     <div class="d-flex justify-content-between">
                                         <div class="text-muted align-self-center">
                                             <img class="article-author-img rounded-circle" src="https://robohash.org/Николай.png?set=set4" alt=""> Николай</div>
-                                        <div class="text-muted align-self-center">26 days ago</div>
+                                        <div class="text-muted align-self-center">{{ article.publishedAt ? article.publishedAt|ago }}</div>
                                     </div>
                                 </a>
                             </div>
                         </div>
+                        {% endfor %}
 
-
-                        <div class="article-container mb-2">
-                            <div class="row no-gutters border rounded-lg overflow-hidden flex-md-row mb-4 shadow-sm position-relative">
-                                <div class="col-auto d-none d-lg-block">
-                                    <img class="article-img" src="{{ asset('images/car1.jpg') }}" alt="">
-                                </div>
-                                <a class="col p-2 px-4 d-flex flex-column article-item" href="{{ path('app_article_show', {'slug': 'chasing-the-red-point'}) }}">
-                                    <h5 class="mb-2">В погоне за красной точкой <span class="badge badge-info article-comments">5 комментов</span></h5>
-                                    <div class="mb-2 d-flex">
-                                        <span class="badge badge-pill badge-secondary mr-2">Карета</span>
-                                    </div>
-                                    <div class="d-flex justify-content-between">
-                                        <div class="text-muted align-self-center"><img class="article-author-img rounded-circle" src="https://robohash.org/MrWhite.png?set=set4" alt=""> Mr. White</div>
-                                        <div class="text-muted align-self-center">26 days ago</div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-
-                        <div class="article-container mb-2">
-                            <div class="row no-gutters border rounded-lg overflow-hidden flex-md-row mb-4 shadow-sm position-relative">
-                                <div class="col-auto d-none d-lg-block">
-                                    <img class="article-img" src="{{ asset('images/car2.jpg') }}" alt="">
-                                </div>
-                                <a class="col p-2 px-4 d-flex flex-column article-item" href="{{ path('app_article_show', {'slug': 'is-there-a-life-after-nine-life'}) }}">
-                                    <h5 class="mb-2">Есть ли жизнь после девятой жизни? <span class="badge badge-info article-comments">9 комментов</span></h5>
-                                    <div class="mb-2 d-flex">
-                                        <span class="badge badge-pill badge-secondary mr-2">Дрындулет</span>
-                                        <span class="badge badge-pill badge-secondary mr-2">Карета</span>
-                                    </div>
-                                    <div class="d-flex justify-content-between">
-                                        <div class="text-muted align-self-center"><img class="article-author-img rounded-circle" src="https://robohash.org/Рыжик.png?set=set4" alt=""> Рыжик</div>
-                                        <div class="text-muted align-self-center">26 days ago</div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-
-                        <div class="article-container mb-2">
-                            <div class="row no-gutters border rounded-lg overflow-hidden flex-md-row mb-4 shadow-sm position-relative">
-                                <div class="col-auto d-none d-lg-block">
-                                    <img class="article-img" src="{{ asset('images/car2.jpg') }}" alt="">
-                                </div>
-                                <a class="col p-2 px-4 d-flex flex-column article-item" href="{{ path('app_article_show', {'slug': 'when-they-put-toilet-in-car'}) }}">
-                                    <h5 class="mb-2">Когда в машинах поставят лоток? <span class="badge badge-info article-comments">9 комментов</span></h5>
-                                    <div class="mb-2 d-flex">
-                                        <span class="badge badge-pill badge-secondary mr-2">Автобус</span>
-                                    </div>
-                                    <div class="d-flex justify-content-between">
-                                        <div class="text-muted align-self-center"><img class="article-author-img rounded-circle" src="https://robohash.org/Том.png?set=set4" alt=""> Том</div>
-                                        <div class="text-muted align-self-center">1 month ago</div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="article-container mb-2">
-                            <div class="row no-gutters border rounded-lg overflow-hidden flex-md-row mb-4 shadow-sm position-relative">
-                                <div class="col-auto d-none d-lg-block">
-                                    <img class="article-img" src="{{ asset('images/car3.jpeg') }}" alt="">
-                                </div>
-                                <a class="col p-2 px-4 d-flex flex-column article-item" href="{{ path('app_article_show', {'slug': 'chasing-the-red-point'}) }}">
-                                    <h5 class="mb-2">В погоне за красной точкой <span class="badge badge-info article-comments">2 комментов</span></h5>
-                                    <div class="mb-2 d-flex">
-                                        <span class="badge badge-pill badge-secondary mr-2">Дрындулет</span>
-                                    </div>
-                                    <div class="d-flex justify-content-between">
-                                        <div class="text-muted align-self-center"><img class="article-author-img rounded-circle" src="https://robohash.org/Николай.png?set=set4" alt=""> Николай</div>
-                                        <div class="text-muted align-self-center">3 months ago</div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
                     </div>
 
                     <div class="col-sm-12 col-md-4 text-center">
