--- a/cat_cas_car/templates/articles/homepage.html.twig
+++ b/cat_cas_car/templates/articles/homepage.html.twig
@@ -23,7 +23,7 @@
                         <div class="article-container mb-2">
                             <div class="row no-gutters border rounded-lg overflow-hidden flex-md-row mb-4 shadow-sm position-relative">
                                 <div class="col-auto d-none d-lg-block">
-                                    <img class="article-img" src="{{ asset('images/car2.jpg') }}" alt="">
+                                    <img class="article-img" src="{{ asset(article.imagePath) }}" alt="">
                                 </div>
                                 <a class="col p-2 px-4 d-flex flex-column article-item" href="{{ path('app_article_show', {'slug': article.slug}) }}">
                                     <h5 class="mb-2">{{ article.title}} <span class="badge badge-info article-comments">5 комментов</span></h5>
@@ -33,7 +33,7 @@
                                     </div>
                                     <div class="d-flex justify-content-between">
                                         <div class="text-muted align-self-center">
-                                            <img class="article-author-img rounded-circle" src="https://robohash.org/Николай.png?set=set4" alt=""> Николай</div>
+                                            <img class="article-author-img rounded-circle" src="{{ article.authorAvatarPath }}" alt=""> {{ article.author }}</div>
                                         <div class="text-muted align-self-center">{{ article.publishedAt ? article.publishedAt|ago }}</div>
                                     </div>
                                 </a>
