--- a/cat_cas_car/templates/articles/show.html.twig
+++ b/cat_cas_car/templates/articles/show.html.twig
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="col-sm-12 p-2">
     <div class="media d-flex align-content-center">
-        <img class="article-detail-image align-self-start mr-3 rounded" src="{{ asset('images/car2.jpg') }}" alt="">
+        <img class="article-detail-image align-self-start mr-3 rounded" src="{{ asset(article.imagePath) }}" alt="">
         <div class="media-body d-inline-block align-self-center">
             <h1 class="mb-2">{{ article.title }}</h1>
             <div class="mb-2 d-flex">
@@ -17,13 +17,16 @@
             </div>
             <div class="d-flex">
                 <div class="text-muted align-self-center">
-                    <img class="article-author-img rounded-circle mr-2" src="https://robohash.org/Николай.png?set=set4" alt="">
-                    Николай
+                    <img class="article-author-img rounded-circle mr-2" src="{{ article.authorAvatarPath }}" alt="">
+                    {{ article.author }}
                 </div>
                 <div class="text-muted align-self-center ml-4">{{ article.publishedAt ? article.publishedAt|ago : 'Неопубликована' }}</div>
                 <div class="text-muted align-self-center ml-4 article-detail-hearts"
-                    data-item="likes" data-type="like"
-                ><span data-item="likesCount">120</span> <i class="far fa-heart text-danger"></i></div>
+                    data-item="likes" data-type="like" data-slug="{{ article.slug }}"
+                >
+                    <span data-item="likesCount">{{ article.likeCount }}</span>
+                    <i class="far fa-heart text-danger"></i>
+                </div>
             </div>
         </div>
     </div>
