--- a/cat_cas_car/templates/base.html.twig
+++ b/cat_cas_car/templates/base.html.twig
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/ico" sizes="16x16" href="/favicon.ico">
 
+    {% block meta %}
+    {% endblock %}
+
     {% block stylesheets %}
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
         {{ encore_entry_link_tags('app') }}
