7. Связи в Doctrine. Часть 2

--- a/cat_cas_car/templates/admin/comments/index.html.twig
+++ b/cat_cas_car/templates/admin/comments/index.html.twig
@@ -3,35 +3,9 @@
 {% block title %}Управление Комментариями{% endblock %}
 
 {% block content %}
-<h1>Управление комментариями</h1>
+<h1>Управление комментариями ({{ pagination.totalItemCount }})</h1>
 
-<form>
-    <div class="input-group mb-3">
-        <input type="text"
-               name="q"
-               class="form-control"
-               placeholder="Найти..."
-               value="{{ app.request.query.get('q') }}"
-        >
-        <div class="input-group-append">
-            <button type="submit" class="btn btn-outline-secondary"><i class="fa fa-search"></i></button>
-        </div>
-    </div>
-
-    <div class="input-group mb-3">
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox"
-                       name="showDeleted"
-                       class="form-check-input"
-                       {% if app.request.query.has('showDeleted') %} checked {% endif %}
-                >
-                Показать удалённые
-            </label>
-        </div>
-    </div>
-</form>
-
+{% include 'partial/filter.html.twig' %}
 
 <table class="table table-striped">
     <thead>
@@ -43,7 +17,7 @@
     </tr>
     </thead>
     <tbody>
-    {% for comment in comments %}
+    {% for comment in pagination %}
         <tr>
             <td>
                 <a href="{{ path('app_article_show', {slug: comment.article.slug }) }}">
@@ -63,4 +37,5 @@
     {% endfor %}
     </tbody>
 </table>
+{{ knp_pagination_render(pagination) }}
 {% endblock %}
