--- a/cat_cas_car/templates/articles/show.html.twig
+++ b/cat_cas_car/templates/articles/show.html.twig
@@ -16,10 +16,7 @@
         <img class="article-detail-image align-self-start mr-3 rounded" src="{{ asset(article.imagePath) }}" alt="">
         <div class="media-body d-inline-block align-self-center">
             <h1 class="mb-2">{{ article.title }}</h1>
-            <div class="mb-2 d-flex">
-                <span class="badge badge-pill badge-secondary mr-2">Дрындулет</span>
-                <span class="badge badge-pill badge-secondary mr-2">Карета</span>
-            </div>
+            {% include 'partial/article_tags.html.twig' with { tags: article.tags } %}
             <div class="d-flex">
                 <div class="text-muted align-self-center">
                     <img class="article-author-img rounded-circle mr-2" src="{{ article.authorAvatarPath }}" alt="">
