--- a/cat_cas_car/templates/admin/tags/index.html.twig
+++ b/cat_cas_car/templates/admin/tags/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base_content.html.twig' %}
 
-{% block title %}{{ title }}{% endblock %}
+{% block title %} Управление тегами {% endblock %}
 
 {% block content %}
-    <h1>{{ title}} ({{ pagination.totalItemCount }})</h1>
+    <h1>Управление тегами ({{ pagination.totalItemCount }})</h1>
 
     {% include 'partial/filter.html.twig' %}
 
