--- a/cat_cas_car/templates/partial/filter.html.twig
+++ b/cat_cas_car/templates/partial/filter.html.twig
@@ -10,15 +10,7 @@
             <button type="submit" class="btn btn-outline-secondary"><i class="fa fa-search"></i></button>
         </div>
     </div>
-    {% if limitOptions|length > 0 %}
-    <div class="input-group mb-3">
-        <select class="browser-default custom-select" name="limit">
-            {% for limit in limitOptions %}
-                <option value="{{ limit.value }}" {% if limit.selected %} selected {% endif %}>{{ limit.text }}</option>
-            {% endfor %}
-        </select>
-    </div>
-    {% endif %}
+    {% include '/partial/limit_options.html.twig' %}
     <div class="input-group mb-3">
         <div class="form-check">
             <label class="form-check-label">
