--- a/cat_cas_car/templates/base.html.twig
+++ b/cat_cas_car/templates/base.html.twig
@@ -16,6 +16,11 @@
     <title>{% block title %}Cat-Cas-Car{% endblock %}</title>
 </head>
 <body>
+{% if is_granted('ROLE_PREVIOUS_ADMIN') %}
+    <div class="alert alert-warning" style="margin-bottom: 0;">
+        Имперсонализация включена. <a href="{{ path('app_homepage', {'_switch_user': '_exit'}) }}">Выйти</a>
+    </div>
+{% endif %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4 navbar-bg">
     <div class="container py-2">
 
@@ -31,21 +36,26 @@
                 </li>
             </ul>
             <ul class="navbar-nav my-2 my-lg-0">
+                {% if is_granted("ROLE_USER") %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img class="nav-profile-img rounded-circle" src="{{ asset('images/cat-profile.png') }}" alt="">
+                        <img class="nav-profile-img rounded-circle" src="{{ app.user.avatarUrl(40) }}" alt="">
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Профиль</a>
-                        <a class="dropdown-item" href="#">Создать статью</a>
+                        <a class="dropdown-item" href="{{ path('app_account') }}">Профиль</a>
+                        {% if is_granted("ROLE_ADMIN") %}
+                        <a class="dropdown-item" href="{{ path('app_admin_index') }}">Административный раздел</a>
+                        {% endif %}
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{{ path('app_logout') }}">Выйти</a>
                     </div>
                 </li>
+                {% else %}
                 <li class="nav-item d-flex my-auto">
                     <a class="btn btn-outline-light my-2 my-sm-0 mr-2" href="{{ path('app_login') }}">Войти</a>
                     <a class="btn btn-outline-light my-2 my-sm-0" href="#">Регистрация</a>
                 </li>
+                {% endif %}
             </ul>
         </div>
     </div>
