--- a/cat_cas_car/templates/admin/articles/index.html.twig
+++ b/cat_cas_car/templates/admin/articles/index.html.twig
@@ -23,13 +23,14 @@
         {% for article in pagination %}
             <tr>
                 <td>
-                    <a href="{{ path('app_admin_articles_edit', {id: article.id }) }}">
+                    <a href="{{ path('app_article_show', {slug: article.slug }) }}">
                         {{ article.title }}
                     </a>
                 </td>
                 <td>{{ article.description }}</td>
                 <td>{{ article.author.firstName }}</td>
                 <td><i class="fas fa-{{ article.isPublished ? 'check text-success' : 'times text-danger' }}"></i></td>
+                <td><a href="{{ path('app_admin_articles_edit', {id: article.id}) }}"><i class="fas fa-pen"></i></a></td>
             </tr>
         {% else %}
             <tr>
