--- a/cat_cas_car/templates/security/register.html.twig
+++ b/cat_cas_car/templates/security/register.html.twig
@@ -19,7 +19,7 @@
                     {{ form_errors(registrationForm.email) }}
                     {{ form_row(registrationForm.email, {
                         attr: { placeholder: 'Ваш Email...' },
-                        label_attr: { class: 'sr-only' }
+                        label_attr: { class: 'sr-only' },
                     }) }}
                     {{ form_row(registrationForm.firstName, {
                         attr: { placeholder: 'Ваше Имя...' },
