--- a/cat_cas_car/templates/admin/articles/form.html.twig
+++ b/cat_cas_car/templates/admin/articles/form.html.twig
@@ -1,12 +1,18 @@
 {{ form_start(articleForm) }}
-                    {{ form_row(articleForm.title) }}
-                    {{ form_row(articleForm.description) }}
-                    {{ form_row(articleForm.body) }}
-                    {% if articleForm.publishedAt is defined %}
-                        {{ form_row(articleForm.publishedAt) }}
-                    {% endif %}
-                    {{ form_row(articleForm.keywords) }}
-                    {{ form_row(articleForm.author) }}
+
+    {% if articleForm.vars.data.imageFilename|default %}
+        <img src="{{ articleForm.vars.data.imageFilename | imagine_filter('articles_preview') }}" height="100">
+    {% endif %}
+
+    {{ form_row(articleForm.image) }}
+    {{ form_row(articleForm.title) }}
+    {{ form_row(articleForm.description) }}
+    {{ form_row(articleForm.body) }}
+    {% if articleForm.publishedAt is defined %}
+        {{ form_row(articleForm.publishedAt) }}
+    {% endif %}
+    {{ form_row(articleForm.keywords) }}
+    {{ form_row(articleForm.author) }}
 
 <button type="submit" class="btn btn-primary">{{ buttonText }}</button>
 {{ form_end(articleForm) }}
