--- a/cat_cas_car/templates/articles/homepage.html.twig
+++ b/cat_cas_car/templates/articles/homepage.html.twig
@@ -23,7 +23,7 @@
                         <div class="article-container mb-2">
                             <div class="row no-gutters border rounded-lg overflow-hidden flex-md-row mb-4 shadow-sm position-relative">
                                 <div class="col-auto d-none d-lg-block">
-                                    <img class="article-img" src="{{ asset(article.imagePath) }}" alt="">
+                                    <img class="article-img" src="{{ article.imageFilename|imagine_filter('articles_preview') }}" alt="">
                                 </div>
                                 <a class="col p-2 px-4 d-flex flex-column article-item" href="{{ path('app_article_show', {'slug': article.slug}) }}">
                                     <h5 class="mb-2">{{ article.title}} {% if article.comments|length > 0 %}<span class="badge badge-info article-comments">{{ article.comments|length }} комментов</span>{% endif %}</h5>
