--- a/cat_cas_car/templates/articles/homepage.html.twig
+++ b/cat_cas_car/templates/articles/homepage.html.twig
@@ -8,16 +8,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-8">
 
-                        <div class="col-sm-12 border rounded-lg overflow-hidden flex-md-row mb-4 shadow-sm position-relative bg-white featured-border">
-                            <div class="row">
-                                <a class="banner-link" href="#">
-                                    <div class="banner-img-block d-block">
-                                        <img class="banner-img" src="{{ asset('images/cat-banner1.jpg') }}" alt="">
-                                    </div>
-                                    <h1 class="text-center mt-2 px-4">Спать или не спать: <br>С новыми кроватками это не вопрос</h1>
-                                </a>
-                            </div>
-                        </div>
+                        {{ render(controller('\\App\\Controller\\PartialController::mainBanner', {banner: banner})) }}
 
                         {% for article in articles %}
                         <div class="article-container mb-2">
@@ -49,20 +40,7 @@
                             </div>
                         </div>
 
-                        <div class="quotes-container bg-white shadow-sm border rounded-lg pb-2 pt-2 px-5 featured-border">
-                            <h3 class="text-center pb-3">Коты в теме</h3>
-                            <p><i class="far fa-comment text-secondary"></i> "Недавно наши ученые создали гудок против собак,
-                                другие коты его не слышат, зато собаки уступают дорогу. Наконец-то в лоточек без пробок"
-                                <br> — <a href="#">Рыжий Бесстыжий, Антикоррупционер</a></p>
-
-                            <p class="pt-4"><i class="far fa-comment text-secondary"></i> "Этот сайт - это просто прелесть, я влюблена!
-                                <i class="fas fa-heart text-danger"></i> <i class="fas fa-heart text-danger"></i> <i class="fas fa-heart text-danger"></i>"
-                                <br>— <a href="#">Сметанка, Мурлыкатель</a></p>
-
-                            <p class="pt-4"><i class="far fa-comment text-secondary"></i> "Предлагаю ввести еще темы о еде,
-                                например, у меня заготовлены шикарные статьи по сосискам"
-                                <br>— <a href="#">Барон Сосискин, Дегустатор сосисок</a></p>
-                        </div>
+                        {{ render(controller('\\App\\Controller\\PartialController::catsKnowThis')) }}
                     </div>
                 </div>
             </div>
